<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">文件管理</string>
    <string name="action_settings">设置</string>
    <string name="result_cout">搜索到%1$d个文件</string>
    <string name="searchtitle">搜索</string>
    <string name="deletetitle">删除</string>
    <string name="selectAll">全选</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="startserver">启动服务器</string>
    <string name="stopserver">停止服务器</string>
    <string name="noserver">服务器未启动</string>
    <string name="starting">服务器启动中</string>
    <string name="httpadd">http://%1$s:%2$d</string>
    <string name="set0">端 口 号：</string>
    <string name="set1">文件存储路径：</string>
    <string name="set2">自 动 同 步：</string>
</resources>
