<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.filemanager.activities.MainActivity">
    <item
        android:id="@+id/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/searchtitle"
        android:orderInCategory="60"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/delete"
        android:title="@string/deletetitle"
        android:orderInCategory="60"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/selectAll"
        android:icon="@drawable/selectall"
        android:title="@string/selectAll"
        android:orderInCategory="60"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/unzip"
        android:title="@string/unzip"
        android:orderInCategory="60"
        app:showAsAction="ifRoom"
        android:visible="false"/>

</menu>
