<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/wifi_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/transfer" />

    <TextView
        android:id="@+id/address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/noserver"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/server_btn"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/address_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/startserver"
        android:textSize="18sp" />

    <Button
        android:id="@+id/setting_btn"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/server_btn"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/action_settings"
        android:textSize="18sp" />

</RelativeLayout>